--- a/vendas.html
+++ b/vendas.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Página de vendas</h1>
     <a href="./index.html">Voltar para home</a>
+    <p>vendas = R$ 5000</p>
 </body>
 </html>
